# bitpanda_api

./: README.md  pyproject.toml
.github/workflows/: run_tests.yml
release_scripts/: openapi.yaml  update_api_client.py
src/bitpanda_api/: __init__.py
src/bitpanda_api/api/default/: get_ticker.py
src/bitpanda_api/models/: __init__.py  error_response.py  get_ticker_response_200.py  get_ticker_response_200_additional_property.py
src/bitpanda_api/utils/: __init__.py  api_utils.py
tests/: conftest.py  test_get_prices.py
